--- a/03-javascript_20ener/ejercicios/T3/parimpar.html
+++ b/03-javascript_20ener/ejercicios/T3/parimpar.html
@@ -446,7 +446,49 @@
                   Revisar respuesta
                 </button>
                 <button class="btn btn-warning fnt-_7" id="btn_borr09">
-                  Revisar respuesta
+                  Limpiar ejercicio
+                </button>
+              </div>
+            </div>
+            <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapse10"
+              aria-expanded="false"
+              aria-controls="collapse10"
+            >
+              Ejercicio 10
+            </button>
+          </h2>
+          <div
+            id="collapse10"
+            class="accordion-collapse collapse show"
+            data-bs-parent="#accordionExample"
+          >
+            <div class="accordion-body">
+              <p>
+                Crea un programa amb  una funció que permeti encendre i apagar una bombeta que se us dona amb dos imatges, una enceça i altra apagada has de trobar 3 maneres diferents de control·lar la bombeta
+              </p>
+              <div class="mb-3" style="display:flex; flex-flow:row nowrap;">
+                <div id="mostrar_10" class="mostrar_10" role="alert"></div>
+                <div id="mostrar_10c" class="mostrar_10c" role="alert"></div></div>
+                <div class="mb-3" style="display:flex; flex-flow:row nowrap;">
+                <div class="mostrar_10" style="height: 1rem;">EJERCICIOS UNO / DOS</div>
+                <div class="mostrar_10" style="height: 1rem;">EJERCICIO TRES</div>
+               </div>
+               </div>
+               </div>
+                <button class="btn btn-primary fnt-_7" id="btn_ejer10">
+                  MODO UNO
+                </button>
+                <button class="btn btn-primary fnt-_7" id="btn_ejer10b">
+                  MODO DOS
+                </button>
+                <button class="btn btn-primary fnt-_7" id="btn_ejer10c">
+                  MODO TRES
                 </button>
               </div>
             </div>
