--- a/03-javascript_20ener/12-forms/valida_fecha_form.html
+++ b/03-javascript_20ener/12-forms/valida_fecha_form.html
@@ -57,5 +57,6 @@
       </form>
     </main>
     <script src="js/validaFechaForm.js"></script>
+    <!-- PRUEBA EN MAC 29 enero -->
   </body>
 </html>
