actualizacion 30 enero media jornada

--- a/03-javascript_20ener/12-forms/valida_fecha_form.html
+++ b/03-javascript_20ener/12-forms/valida_fecha_form.html
@@ -31,7 +31,7 @@
           <small id="mostra1" class="text-muted"></small>
         </fieldset>
         <fieldset class="form-group">
-          <label for="dni2">Fecha de nacimiento:</label>
+          <label for="dni2">DNI:</label>
           <input
             type="text"
             id="dni"
