--- a/03-javascript_20ener/ejercicios/T3/T3b/index.html
+++ b/03-javascript_20ener/ejercicios/T3/T3b/index.html
@@ -15,6 +15,8 @@
     <main class="container-fluid p-5">
       <div class="w3-container">
         <div class="w3-left-align"><h2>Ejercicio 1</h2></div>
+        <button id="boton_ej1" class="btn btn-primary">Ver Meses</button>
+        <div id="mostrar_ejer1"></div>
       </div>
     </main>
     <script src="js/scripts.js"></script>
