Subida viernes 31 enero

--- a/03-javascript_20ener/ejercicios/T3/T3b/index.html
+++ b/03-javascript_20ener/ejercicios/T3/T3b/index.html
@@ -9,6 +9,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Ejercicios del archivo T3B</title>
   </head>
   <body>
@@ -16,7 +17,13 @@
       <div class="w3-container">
         <div class="w3-left-align"><h2>Ejercicio 1</h2></div>
         <button id="boton_ej1" class="btn btn-primary">Ver Meses</button>
-        <div id="mostrar_ejer1"></div>
+        <div class="cont_ejer1">
+          <div id="mostrar_ejer1a"></div>
+          <div id="mostrar_ejer1b"></div>
+          <div id="mostrar_ejer1d"></div>
+          <div id="mostrar_ejer1c"></div>
+          <div id="mostrar_ejer1e"></div>
+        </div>
       </div>
     </main>
     <script src="js/scripts.js"></script>
