desde mac 3 feb

--- a/03-javascript_20ener/EVAL/adivinaPalabra.html
+++ b/03-javascript_20ener/EVAL/adivinaPalabra.html
@@ -32,6 +32,6 @@
 
     <script src="js/listadoPalabras.js"></script>
     <!-- <script src="js/mensajes.js"></script> -->
-    <script src="js/script_ants.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
