windows cifo 4 feb

--- a/03-javascript_20ener/EVAL/adivinaPalabra.html
+++ b/03-javascript_20ener/EVAL/adivinaPalabra.html
@@ -31,7 +31,7 @@
     </main>
 
     <script src="js/listadoPalabras.js"></script>
-    <!-- <script src="js/mensajes.js"></script> -->
+    <script src="js/mensajes.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
