--- a/03-javascript_20ener/15-modulos/index.html
+++ b/03-javascript_20ener/15-modulos/index.html
@@ -6,7 +6,7 @@
     <title>Módulos con Javascript</title>
   </head>
   <body>
-    <script src="js/cliente.js" type="module"></script>
+    <!-- <script src="js/cliente.js" type="module"></script>  Al ser modulo no es necesario cargar el archivo, ya que se importa -->
     <script src="js/app.js" type="module"></script>
   </body>
 </html>
