--- a/03-javascript_20ener/14_Api_fetch/version_mod/index.html
+++ b/03-javascript_20ener/14_Api_fetch/version_mod/index.html
@@ -26,11 +26,12 @@
       </button>
     </div>
     <div id="muestra"></div>
-    <script src="js/text.js"></script>
+    <!-- <script src="js/text.js"></script>
     <script src="js/empleado.js"></script>
     <script src="js/empleados.js"></script>
     <script src="js/empleados_2.js"></script>
     <script src="js/picsum.js"></script>
-    <script src="js/addusers.js"></script>
+    <script src="js/addusers.js"></script> -->
+    <script src="js/app.js" type="module"></script>
   </body>
 </html>
